--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -180,6 +180,10 @@ button,
   box-shadow: 0 2px 10px rgba(21, 1, 88, 0.3);
 }
 
+.navbar__inner {
+  padding: 0 0.5rem;
+}
+
 .navbar__title {
   color: white;
   font-family: 'Red Hat Display', sans-serif;
